Updating display name and description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "theme-candy-cane",
-  "displayName": "theme-candy-cane",
-  "description": "",
+  "displayName": "Candy Cane Theme",
+  "description": "Delicious theme",
   "version": "0.0.3",
   "publisher": "eisisig",
   "engines": {
