--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "categories": [
     "Themes"
   ],
+   "repository": {
+      "type": "git",
+      "url": "https://imeisisig.visualstudio.com/candy-cane-theme"
+  },
   "contributes": {
     "themes": [
       {
