--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://imeisisig.visualstudio.com/candy-cane-theme"
+    "url": "https://github.com/eisisig/vscode-theme-candy-cane"
   },
   "contributes": {
     "themes": [
